...
                        ) {
                        }

                        Column(
                            modifier = Modifier.weight(1f)
                        ) {
                            Text(text = "Nombre: ${juego.nombre}")
                            Text(text = "Precio: ${juego.precio}")
                        }

                        Button(
                            onClick = { navController.navigate("editarJuego/${juego.id}") },
                            modifier = Modifier.padding(start = 12.dp)
...
